<?xml version="1.0"?>
<package>
  <name>nextage_description</name>
  <version>0.2.3</version>
  <description>The nextage_description package</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isao Isaac Saito</maintainer>
  <author>Kei Okada</author>
  <author>Isao Isaac Saito</author>
  <author email="w.yasuda@opensource-robotics.tokyo.jp">Wataru Yasuda</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/nextage_description</url>
  <url type="bugtracker">https://github.com/tork-a/rtmros_nextage/issues</url>
  <url type="repository">https://github.com/tork-a/rtmros_nextage</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

  <export/>
</package>