<?xml version="1.0"?>
<package>
  <name>nextage_description</name>
  <version>0.4.1</version>
  <description>As a part of rtmros_nextage package that is a ROS interface for <a href = "http://nextage.kawada.jp/en/">Nextage</a> dual-armed robot from Kawada Robotics Inc, this package provides its 3D model that can be used in simulation and <a href = "http://ros.org/wiki/moveit">MoveIt!</a>-based motion planning tasks.
  </description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isaac Isao Saito</maintainer>
  <author>Kei Okada</author>
  <author>Isaac Isao Saito</author>
  <author email="w.yasuda@opensource-robotics.tokyo.jp">Wataru Yasuda</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/nextage_description</url>
  <url type="bugtracker">https://github.com/tork-a/rtmros_nextage/issues</url>
  <url type="repository">https://github.com/tork-a/rtmros_nextage</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

  <export/>
</package>