<?xml version="1.0"?>
<package>
  <name>nextage_gazebo</name>
  <version>0.7.10</version>
  <description>Gazebo simulation for NEXTAGE Open</description>

  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <license>BSD</license>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="iiysaito@opensource-robotics.tokyo.jp">Isaac I. Y. Saito</author>
  <url type="website">http://wiki.ros.org/nextage_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>nextage_description</build_depend>
  <build_depend>nextage_moveit_config</build_depend>
  <build_depend>ros_controllers</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>nextage_description</run_depend>
  <run_depend>nextage_moveit_config</run_depend>
  <run_depend>ros_controllers</run_depend>
  <test_depend>rostest</test_depend>
  <export>
  </export>
</package>
