<?xml version="1.0"?>
<package>
  <name>nextage_ros_bridge</name>
  <version>0.2.3</version>
  <description>The nextage_ros_bridge package</description>

  <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isao Isaac Saito</maintainer>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="iisaito@opensource-robotics.tokyo.jp">Isao Isaac Saito</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nextage_ros_bridge</url>
  <url type="bugtracker">https://github.com/tork-a/rtmros_nextage/issues</url>
  <url type="repository">https://github.com/tork-a/rtmros_nextage</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hironx_ros_bridge</build_depend>
  <build_depend>nextage_description</build_depend>

  <run_depend>hironx_ros_bridge</run_depend>
  <run_depend>nextage_description</run_depend>

  <export/>
</package>
