<?xml version="1.0"?>
<package>
  <name>rtmros_nextage</name>
  <version>0.0.1</version>
  <description>The rtmros_nextage package</description>

  <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isao Isaac Saito</maintainer>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="iisaito@opensource-robotics.tokyo.jp">Isao Isaac Saito</author>
  <author email="w.yasuda@opensource-robotics.tokyo.jp">Wataru Yasuda</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rtmros_nextage</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>nextage_description</run_depend>
  <run_depend>nextage_launch</run_depend>

  <export>
    <metapackage/>
  </export>
</package>